--- a/main/src/addins/CSharpBinding/CSharpBinding.csproj
+++ b/main/src/addins/CSharpBinding/CSharpBinding.csproj
@@ -214,6 +214,9 @@
     <EmbeddedResource Include="templates\EmptyActionScriptFile.xft.xml">
       <LogicalName>EmptyActionScriptFile.xft.xml</LogicalName>
     </EmbeddedResource>
+    <EmbeddedResource Include="icons\ActionScript.FileIcon">
+      <LogicalName>ActionScript.FileIcon</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="gtk-gui\generated.cs" />
